--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,25 +2,25 @@
 <title>Login</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
+
 <body>
 
 <div class="w3-quarter w3-container">
 </div>
 
 <div class="w3-container w3-half" style="margin-top:10%">
-<header class="w3-container w3-teal">
+<header class="w3-container w3-card-4 w3-teal">
   <h1>Login</h1>
 </header>
-<form class="w3-container w3-card-4" action='/read' method='post'>
-
+<form class="w3-container w3-card-4" action='/login' method='post'>
 <p>
 <input name="id" class="w3-input" type="text" style="width:90%" required>
-<label class="w3-label w3-validate">Name</label></p>
+<label class="w3-label w3-validate">Account</label></p>
 <p>
 <input name="pw" class="w3-input" type="password" style="width:90%" required>
 <label class="w3-label w3-validate">Password</label></p>
 
-<p><input class="w3-btn w3-section w3-teal w3-ripple" type='submit' value='Submit'></p>
+<p><input class="w3-btn w3-section w3-teal w3-ripple" type='submit' value='Login'></p>
 
 </form>
 Don't have an account yet? <a href="">GET ONE!</a>
