--- a/views/read.ejs
+++ b/views/read.ejs
@@ -1,10 +1,10 @@
 <head>
-	<title>Hello World</title>
+	<title>Restaurant</title>
 	<link rel="stylesheet" href="http://www.w3schools.com/lib/w3.css">
 	<style>
-	li{
-		border-right: 2px double #DDDDDD;
-	}
+		li{
+			border-right: 2px double #DDDDDD;
+		}
 	</style>
 </head>
 <body>
@@ -12,7 +12,15 @@
 		<h1>Restaurants</h1>
 	</div>
 	<ul class="w3-navbar w3-light-grey" style=" box-shadow: 2px 2px 2px #888888;">
-		<li><a style="color:#555555" href="">Add Restaurant</a></li>
+		<li><a style="color:#555555" href="./new">Add Restaurant</a></li>
 	</ul>
-
+	<hr>
+	<center><%= list.length %> results</center>
+	<hr>
+	<ul class="w3-ul w3-hoverable">
+		<% for(var i=0; i<list.length; i++){ %>
+		<a href="./display?_id=<%=list[i]._id%>"><li><%= list[i].name%></li></a>
+		<% } %>
+	</ul>
+	
 </body>
