--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,24 +9,24 @@
 </div>
 
 <div class="w3-container w3-half" style="margin-top:10%">
-<header class="w3-container w3-card-4 w3-teal">
+<header class="w3-container w3-teal">
   <h1>Login</h1>
 </header>
 <form class="w3-container w3-card-4" action='/login' method='post'>
+<label class="w3-label w3-text-red"><%= failed %></label>
 <p>
-<input name="id" class="w3-input" type="text" style="width:90%" required>
+<input name="id" class="w3-input" type="text" required>
 <label class="w3-label w3-validate">Account</label></p>
 <p>
-<input name="pw" class="w3-input" type="password" style="width:90%" required>
+<input name="pw" class="w3-input" type="password" required>
 <label class="w3-label w3-validate">Password</label></p>
 
 <p><input class="w3-btn w3-section w3-teal w3-ripple" type='submit' value='Login'></p>
+<p>Don't have an account yet? <a href="/account">GET ONE!</a></p>
 
 </form>
-Don't have an account yet? <a href="">GET ONE!</a>
-<br>
-<br>
-<br>
+
+
 </div>
 </body>
 </html> 
