--- a/views/new.ejs
+++ b/views/new.ejs
@@ -5,6 +5,7 @@
 	li{
 		border-right: 2px double #DDDDDD;
 	}
+
 </style>
 <body>
 
@@ -17,10 +18,13 @@
 
 
 <form action="/create" method="post" encType="multipart/form-data"
-      class="w3-container" style="width:100%">
+      class="w3-container w3-card-4 w3-margin">
   <p>
   <input name="name" class="w3-input" type="text" required>
   <label class="w3-label w3-validate">Name</label></p>
+  <p>
+  <input name="borough"class="w3-input" type="text">
+  <label class="w3-label w3-validate">Borough</label></p>
   <p>
   <input name="cuisine"class="w3-input" type="text">
   <label class="w3-label w3-validate">Cuisine</label></p>
@@ -43,6 +47,8 @@
   <input name="lat"class="w3-input" type="text">
   <label class="w3-label w3-validate">GPS Coordinates (lat.)</label></p>
   <p>
+ 
+
   <input name="sampleFile"class="w3-input" type="file">
   <label class="w3-label w3-validate">Photo</label></p>
   <p>
